algoritmo_de_vernam

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,8 @@
                         <td>
                             {% if enc == "Cifrado Desplazamiento Puro" %}
                                 <a href="/cifrado-desplazamiento-puro">{{ enc }}</a>
-                            {% elif enc == "encriptador 2" %}
-                                <a href="#">{{ enc }}</a>
+                            {% elif enc == "Algoritmo de Vernam" %}
+                                <a href="/algoritmo-de-vernam">{{ enc }}</a>
                             {% elif enc == "encriptador 3" %}
                                 <a href="#">{{ enc }}</a>
                             {% elif enc == "encriptador 4" %}
