--- a/templates/cifrado-desplazamiento-puro.html
+++ b/templates/cifrado-desplazamiento-puro.html
@@ -8,6 +8,7 @@
   <div class="form-group">
       <label for="textoEncriptar">Ingrese la frase a encriptar o desencriptar</label>
       <input type="text" class="form-control" id="textoEncriptar" name="textoEncriptar" aria-describedby="textoAyuda" required>
+      <small id="textoEncriptarAyuda" class="form-text text-muted">Solo se encriptarán caracteres en el alfabeto (a-z).</small>
   </div>
   
   <div class="form-group">
